Fix issues with Java 21